docs: users api docs
